QUICKTOOLKIT的工具类迁出